[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Dynamic Link/DAXA.h

typedef DWORD    PASCAL EXPORT funcAxaiExternalStartADC(long lModuleNo, long lSize, long *lpChannelPos);
typedef DWORD    PASCAL EXPORT funcAxaiExternalStopADC(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiExternalReadFifoStatus(long lModuleNo, DWORD *dwpStatus);
typedef DWORD    PASCAL EXPORT funcAxaiExternalReadVoltage(long lModuleNo, long lSize, long *lpChannelPos, long lDataSize, long lBuffSize, long lStartDataPos, double *dpVolt, long *lpRetDataSize, DWORD *dwpStatus);
typedef DWORD    PASCAL EXPORT funcAxaoInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaoInfoGetChannelCount(long *lpChannelCount);
typedef DWORD    PASCAL EXPORT funcAxaoSetRange(long lChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoGetRange(long lChannelNo, double *dpMinVolt, double *dpMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoSetMultiRange(long lSize, long *lpChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaoWriteVoltage(long lChannelNo, double dVolt);
typedef DWORD    PASCAL EXPORT funcAxaoWriteMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaoReadVoltage(long lChannelNo, double *dpVolt);
typedef DWORD    PASCAL EXPORT funcAxaoReadMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
extern funcAxaiExternalStartADC                 *AxaiExternalStartADC;
extern funcAxaiExternalStopADC                  *AxaiExternalStopADC;
extern funcAxaiExternalReadFifoStatus           *AxaiExternalReadFifoStatus;
extern funcAxaiExternalReadVoltage              *AxaiExternalReadVoltage;
extern funcAxaoInfoGetModuleNoOfChannelNo       *AxaoInfoGetModuleNoOfChannelNo;
extern funcAxaoInfoGetChannelCount              *AxaoInfoGetChannelCount;
extern funcAxaoSetRange                         *AxaoSetRange;
extern funcAxaoGetRange                         *AxaoGetRange;
extern funcAxaoSetMultiRange                    *AxaoSetMultiRange;
extern funcAxaoWriteVoltage                     *AxaoWriteVoltage;
extern funcAxaoWriteMultiVoltage                *AxaoWriteMultiVoltage;
extern funcAxaoReadVoltage                      *AxaoReadVoltage;
extern funcAxaoReadMultiVoltage                 *AxaoReadMultiVoltage;