[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Visual Basic(Net)/AXA.vb


    '==External Trigger Mode 함수
    '지정한 입력모듈의 선택된 채널들의 외부 트리거 모드를 시작한다.
    '=================================================================================================='
    ' lSize            : 지정한 입력 모듈에서 외부트리거를 사용 할 채널갯수
    ' *lpChannelPos    : 지정한 입력 모듈에서 외부트리거를 사용 할 채널의 Index
    Public Declare Function AxaiExternalStartADC Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lSize As Integer, ByRef lpChannelPos As Integer) As Integer
    '지정한 입력모듈의 외부트리거 모드를 정지한다.  
    Public Declare Function AxaiExternalStopADC Lib "AXL.dll" (ByVal lModuleNo As Integer) As Integer
    '지정한 입력모듈의 Fifo상태를 반환한다.
    '=================================================================================================='
    ' upStatus         : FIFO_DATA_EXIST(0)
    '                  : FIFO_DATA_EMPTY(1)
    '                  : FIFO_DATA_HALF(2)
    '                  : FIFO_DATA_FULL(6)
    '=================================================================================================='
    Public Declare Function AxaiExternalReadFifoStatus Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upStatus As Integer) As Integer
    '지정한 입력모듈의 외부신호에 의해 변환된 A/D값을 읽어옴.
    ' lSize            : 지정한 입력 모듈에서 변환된 A/D값을 읽어올 채널의 갯수(AxaiExternalStartADC에 사용한 채널갯수와 동일 해야됨)
    ' lpChannelPos     : 지정한 입력 모듈에서 변환된 A/D값을 읽어올 채널의 Index(AxaiExternalStartADC에 사용한 채널의 Index와 동일 해야됨)
    ' lDataSize        : 외부트리거에 의해 A/D변환된 값을 한번에 읽어 올 최대 데이타의 갯수
    ' lBuffSize        : 외부에서(사용자 Program) 할당한 Data Buffer의 Size
    ' lStartDataPos    : 외부에서(사용자 Program) 할당한 Data Buffer에 저장 시작 할 위치 
    ' dpVolt           : A/D변환된 값을 할당 받을 2차원 배열 포인트(dpVlot[Channel][Count])
    ' lpRetDataSize    : A/D변환된 값이 Data Buffer에 실제 할당된 갯수
    ' upStatus         : A/D변환된 값을 Fifo(H/W Buffer)로 부터 읽을 때 Fifo상태를 반환함.
    Public Declare Function AxaiExternalReadVoltage Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lSize As Integer, ByRef lpChannelPos As Integer, ByVal lDataSize As Integer, ByVal lBuffSize As Integer, ByVal lStartDataPos As Integer, ByRef dpVolt As Double, ByRef lpRetDataSize As Integer, ByRef upStatus As Integer) As Integer

    '========== 출력 모듈 정보 검색 함수 ========================================================================================
    '지정한 출력 채널 번호로 모듈 번호를 확인한다.
    Public Declare Function AxaoInfoGetModuleNoOfChannelNo Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef lpModuleNo As Integer) As Integer

    '아날로그 출력 모듈의 전체 채널 개수를 확인한다.
    Public Declare Function AxaoInfoGetChannelCount Lib "AXL.dll" (ByRef lpChannelCount As Integer) As Integer

    '========== 출력 모듈 설정 및 확인 함수 ========================================================================================
    '지정한 출력 채널에 출력 전압 범위를 설정한다
    '=================================================================================================='
    ' AO4R, AO2Hx
    ' dMinVolt    : -10V
    ' dMaxVolt    : 10V
    '=================================================================================================='
    Public Declare Function AxaoSetRange Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Integer

    '지정한 출력 채널의 출력 전압 범위를 확인한다.
    '=================================================================================================='
    ' AO4R, AO2Hx
    ' dMinVolt    : -10V
    ' dMaxVolt    : 10V
    '=================================================================================================='
    Public Declare Function AxaoGetRange Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpMinVolt As Double, ByRef dpMaxVolt As Double) As Integer

    '지정한 여러 출력 채널에 출력 전압 범위를 설정한다.
    '=================================================================================================='
    ' AO4R, AO2Hx
    ' dMinVolt    : -10V
    ' dMaxVolt    : 10V
    '=================================================================================================='
    Public Declare Function AxaoSetMultiRange Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Integer

    '지정한 출력 채널에 입력된 전압이 출력 된다.
    Public Declare Function AxaoWriteVoltage Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dVolt As Double) As Integer

    '지정한 여러 출력 채널에 입력된 전압이 출력 된다.
    Public Declare Function AxaoWriteMultiVoltage Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByRef dpVolt As Double) As Integer

    '지정한 출력 채널에 출력되는 전압 값을 확인한다.
    Public Declare Function AxaoReadVoltage Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpVolt As Double) As Integer

    '지정한 여러 출력 채널에 출력되는 전압 값을 확인한다.
    Public Declare Function AxaoReadMultiVoltage Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByRef dpVolt As Double) As Integer
End Module
